# Javelin

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
datagen/: Cargo.toml
datagen/src/: file_manager.rs  lib.rs  main.rs  selfplay_thread.rs  structs.rs
resources/: sprt_commands.txt
resources/books/: UHO_2024_8mvs_big_+080_+099.epd
resources/nets/: base_policy.net  base_value.net  policy_001.net  policy_002.net  policy_003.net  policy_004.net  value-000.net  value-001.net  value_001.net  value_001b.net  value_002.net  value_003.net  value_004.net  value_005.net  value_006.net  value_007.net  value_008.net  value_009.net  value_010.net  value_011.net
resources/training/: value.ot
resources/training/snapshots/: value_snapshot-1.net  value_snapshot-100.net  value_snapshot-101.net  value_snapshot-102.net  value_snapshot-103.net  value_snapshot-104.net  value_snapshot-105.net  value_snapshot-106.net  value_snapshot-107.net  value_snapshot-108.net  value_snapshot-109.net  value_snapshot-11.net  value_snapshot-110.net  value_snapshot-12.net  value_snapshot-13.net  value_snapshot-14.net  value_snapshot-15.net  value_snapshot-16.net  value_snapshot-17.net  value_snapshot-18.net  value_snapshot-19.net  value_snapshot-2.net  value_snapshot-20.net  value_snapshot-21.net  value_snapshot-22.net  value_snapshot-23.net  value_snapshot-24.net  value_snapshot-25.net  value_snapshot-26.net  value_snapshot-27.net  value_snapshot-28.net  value_snapshot-29.net  (+77 more)
src/: attacks.rs  benchmark.rs  bit_ops.rs  bitboard.rs  bitboards.rs  board.rs  commands.rs  consts.rs  core_structs.rs  eval.rs  lib.rs  main.rs  mcts.rs  movegen.rs  neural_core.rs  options.rs  perft.rs  rays.rs  search_raport.rs  search_report.rs  see.rs  types.rs  uci.rs  zobrist.rs
src/core/: attacks.rs  bit_ops.rs  bitboard.rs  board.rs  core_structs.rs  mod.rs  move_history.rs  movegen.rs  rays.rs  zobrist.rs
src/eval/: pesto.rs  policy_network.rs  value_network.rs
src/mcts/: node.rs  phantom_node.rs  qsearch.rs  search_info.rs  search_params.rs  search_rules.rs  search_tree.rs
src/neural/: activation.rs  mod.rs  network_layer.rs
trainer/: Cargo.toml
trainer/src/: bullet_converter.rs  core_net_struct.rs  main.rs  policy_data_loader.rs  policy_trainer.rs  simple_trainer.rs  value_data_loader.rs  value_net.rs  value_trainer.rs
