[package]
name = "javelin"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.linux-debug]
inherits = "release"
debug = true

[dependencies]
colored = "*"
rand = "0.8"
once_cell = "1.10.0"
arrayvec = "0.7.4"
console = "0.15.0"