[package]
name = "javelin"
version = "0.20.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[profile.linux-debug]
inherits = "release"
debug = true

[dependencies]
colored = "*"
rand = "0.8"
once_cell = "1.10.0"
arrayvec = "0.7.4"
unicase = "2.7.0"
dashmap = "4.0.0"

[workspace]
members = ["datagen", "trainer"]
