[package]
name = "javelin"
version = "2.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[dependencies]
colored = "*"
rand = "0.8"
once_cell = "1.10.0"
arrayvec = "0.7.4"
unicase = "2.7.0"
dashmap = "4.0.0"
goober = { git = 'https://github.com/jw1912/goober.git' }

[workspace]
members = ["datagen", "trainer"]
