[package]
name = "trainer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5"
rand = "0.6.0"
rayon="1.10.0"
colored = "*"
stacker = "0.1.14"
arrayvec = "0.7.4"
javelin = { path = "../" }
datagen = { path = "../datagen/" }
goober = { git = 'https://github.com/jw1912/goober.git' }
bullet = { package = "bullet_lib", git = 'https://github.com/jw1912/bullet', features = ["hip"] }